@@ -3,6 +3,8 @@
                               Kiji Schema Release Notes
 
 Version 1.0.0-rc4
+  * SCHEMA-147. Hide OperatorRowFilter. You should use AndRowFilter or
+      OrRowFilter directly.
   * SCHEMA-118. KijiTableLayout constructors are now hidden. Create a new layout
       with KijiTableLayout.newLayout(TableLayoutDesc) or create one updated from
       an old one with KijiTableLayout.createUpdatedLayout(TableLayoutDesc,
